--- a/popup.html
+++ b/popup.html
@@ -4,7 +4,8 @@
     <link rel="stylesheet" href="searchBar.css">
   </head>
   <body>
-    <button id="changeColor"></button>
+    <input placeholder="travel" id="newitem"></input><br>
+    <button type="button" id="buttonGoTo" style="width:100%">Teleport</button><br>
     <script src="popup.js"></script>
   </body>
 </html>
