Add function to read url and append input

--- a/popup.html
+++ b/popup.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>TeleportNow</title>
+    <script src="popup.js"></script>
     <link rel="stylesheet" href="searchBar.css">
   </head>
   <body>
     <input placeholder="travel" id="newitem"></input><br>
-    <button type="button" id="buttonGoTo" style="width:100%">Teleport</button><br>
-    <script src="popup.js"></script>
+    <button type="button" id="teleportButton" style="width:100%">Teleport</button><br>
   </body>
 </html>
