add dictionary for shortcuts

--- a/popup.html
+++ b/popup.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="searchBar.css">
   </head>
   <body>
-    <input placeholder="travel" id="newitem"></input><br>
+    <input placeholder="" autofocus="autofocus" id="newitem"></input><br>
     <button type="button" id="teleportButton" style="width:100%">Teleport</button><br>
   </body>
 </html>
